--- a/_data/data.yml
+++ b/_data/data.yml
@@ -56,7 +56,7 @@ education:
       university: Harvard University
       time: 2011 - 2012
       details: |
-        I am illegaly legal so don't report me
+        I am illegaly___ legal so don't report me
 
           - yeet
           - hue
