--- a/_data/data.yml
+++ b/_data/data.yml
@@ -45,7 +45,7 @@ sidebar:
 
 career-profile:
     title: About PUBG
-    summary: |
+    summary:
     PLAYERUNKNOWN'S BATTLEGROUNDS (PUBG) is a competitive survival shooter formally developed/published by Bluehole. PUBG is now being developed by PUBG Corp, a Bluehole subsidiary company [1] in cooperation with Brendan Greene (PLAYERUNKNOWN) as the Creative Director, PUBG is Greene's first standalone game. Players are dropped into a wide, open area, and they must fight to the death - all while the battlefield shrinks, adding pressure to all in its grip. Use a variety of interesting weapons and vehicles amid the BATTLEGROUNDS. "Killing off another player cuts down on your competition, but it also offers up the opportunity to grab some loot. Your character can only carry around a limited amount of gear, so there are important questions to ask whenever you come across new items. Is it better to stick with your current 9mm pistol, or hold out hope that you'll be able to find ammo for a found 12 gauge shotgun?" BATTLEGROUNDS is running on Unreal Engine 4, players take on the Battle Royale
     experience on a 8x8 km map called "Erangel." BATTLEGROUNDS is a good balance between Arma 3 and H1Z1.
 
